Update HttpOnly.java